--- a/src/app/template.html
+++ b/src/app/template.html
@@ -1,3 +1,8 @@
 <div [ngClass]="getClasses()" >
     Hello, World.
 </div>
+
+<div class="form-group m-2">
+    <label>Name:</label>
+    <input class="form-control" [value]="model.getProduct(1)?.name || 'None'" />
+</div>
