--- a/src/app/template.html
+++ b/src/app/template.html
@@ -1,5 +1,5 @@
-<div [ngClass]="getClasses()" >
-    Hello, World.
+<div [ngClass]="'text-white m-2 p-2 ' + getClasses()"
+    [textContent]="'Name: ' + (model.getProduct(1)?.name || 'None')">
 </div>
 
 <div class="form-group m-2">
