--- a/src/app/template.html
+++ b/src/app/template.html
@@ -2,6 +2,10 @@
     [textContent]="'Name: ' + (model.getProduct(1)?.name || 'None')">
 </div>
 
+<div [ngClass]="'text-white m-2 p-2 ' + getClasses()">
+    Name: {{ model.getProduct(1)?.name || 'None' }}
+</div>
+
 <div class="form-group m-2">
     <label>Name:</label>
     <input class="form-control" [value]="model.getProduct(1)?.name || 'None'" />
