--- a/src/app/template.html
+++ b/src/app/template.html
@@ -1,6 +1,6 @@
 <div class="text-white m-2">
     <div class="p-2 bg-warning">
-        The <span [style.fontSize]="fontSizeWithUnits">first</span>
+        The <span [ngStyle]="getStyles(1)">first</span>
         product is {{model.getProduct(1).name}}.
     </div>
     <div class="p-2 bg-info">
